--- a/ui-service/src/main/resources/templates/weather.html
+++ b/ui-service/src/main/resources/templates/weather.html
@@ -8,7 +8,7 @@
 <div>
     <th scope="row"><a th:text="${weather.getTime()}"></a></th>
     <th scope="row"><a th:text="${weather.getValueNow()}"></a></th>
-    <th scope="row"><a th:text="${weather.getValueEvening()}"></a></th>
+    <th scope="row"><a th:text="${weather.getValueFeeling()}"></a></th>
 </div>
 </body>
 </html>
