--- a/ui-service/src/main/resources/templates/weather.html
+++ b/ui-service/src/main/resources/templates/weather.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 <div>
+    <a>время: </a>
     <th scope="row"><a th:text="${weather.getTime()}"></a></th>
+    <br>
+    <a>сейчас: </a>
     <th scope="row"><a th:text="${weather.getValueNow()}"></a></th>
+    <br>
+    <a>по ощущениям: </a>
     <th scope="row"><a th:text="${weather.getValueFeeling()}"></a></th>
 </div>
 </body>
