add compose to pg

--- a/ui-service/src/main/resources/templates/resultCompareFile.html
+++ b/ui-service/src/main/resources/templates/resultCompareFile.html
@@ -12,12 +12,12 @@
     <br>
     <br>
     <a>разница в файлах</a>
-    <th scope="row"><a th:text="${resultCompare.getOneCFile()()}"></a></th>
+    <th scope="row"><a th:text="${resultCompare.getOneCFile()}"></a></th>
     <br>
     <br>
     <br>
     <a>разница в файлах</a>
-    <th scope="row"><a th:text="${resultCompare.getPepsiFile()()}"></a></th>
+    <th scope="row"><a th:text="${resultCompare.getPepsiFile()}"></a></th>
     <br>
 </div>
 
