add compose to pg

--- a/ui-service/src/main/resources/templates/resultCompareFile.html
+++ b/ui-service/src/main/resources/templates/resultCompareFile.html
@@ -11,12 +11,12 @@
     <br>
     <br>
     <br>
-    <a>разница в файлах</a>
+    <a>файл 1с</a>
     <th scope="row"><a th:text="${resultCompare.getOneCFile()}"></a></th>
     <br>
     <br>
     <br>
-    <a>разница в файлах</a>
+    <a>файл pepsi</a>
     <th scope="row"><a th:text="${resultCompare.getPepsiFile()}"></a></th>
     <br>
 </div>
